[tool.poetry]
name = "kaggle-poison-mushrooms"
version = "0.1.0"
description = ""
authors = ["Petur Einarsson <petur.einarsson@iaggbs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
lightgbm = "^4.5.0"
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
